@@ -1,6 +1,7 @@
 \name{surveillance-defunct}
 \alias{surveillance-defunct}
 \title{Defunct Functions in Package \pkg{surveillance}}
+\alias{compMatrix.writeTable}
 \alias{makePlot}
 \alias{test}
 \alias{testSim}
@@ -10,16 +11,19 @@
 }
 \usage{
 ## Defunct in surveillance 1.17.0
+compMatrix.writeTable(compMatrix)
 makePlot(outputpath, data = "k1", method = "rki1",
          name, disease, range = 157:339)
 test(data = c("k1", "m5"), range = 157:339)
 testSim(p = 0.99, r = 0.01, length = 400, A = 1, alpha = 1,
         beta = 0, phi = 0, frequency = 1, state = NULL, K, 
         range = 200:400)
-
 toFileDisProg(disProgObj, toFile)
 }
 \details{
+  The trivial function \code{compMatrix.writeTable} is no longer used
+  (it did nothing more than generating an \code{\link{xtable}} of its input).
+  
   The ancient test function \code{makePlot} is no longer used,
   \code{test} calls of outbreak detection algorithms applied to the old
   SurvStat datasets can be found in \code{vignette("surveillance")},
